--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 openfn_engine-*.tar
 
+# OpenFn Runtime
+/priv/openfn/runtime
