--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,5 @@ jobs:
       - run: mkdir ./tmp
       - run: mix local.hex --force
       - run: mix local.rebar --force
-      - run: mix do setup, deps.compile, compile
+      - run: mix do deps.get, setup, deps.compile, compile
       - run: mix test
