--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     parallelism: 1
     docker:
-      - image: circleci/elixir:1.11.3-node
+      - image: circleci/elixir:1.10.3-node
         environment:
           MIX_ENV: test
 
@@ -16,5 +16,5 @@ jobs:
       - run: mkdir ./tmp
       - run: mix local.hex --force
       - run: mix local.rebar --force
-      - run: mix do deps.get, setup, deps.compile, compile
+      - run: mix do deps.get, compile
       - run: mix test
