--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,3 +18,6 @@ jobs:
       - run: mix local.rebar --force
       - run: mix do deps.get, compile
       - run: mix test
+
+      - store_test_results:
+          path: test-reports/
