--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - checkout
 
       - run: mkdir ./tmp
+      - run: mkdir test-reports
       - run: mix local.hex --force
       - run: mix local.rebar --force
       - run: mix do deps.get, compile
