--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run: mix local.hex --force
       - run: mix local.rebar --force
       - run: mix do deps.get, compile
-      - run: mix coveralls.json -o ./test-reports
+      - run: mix coveralls.json -o ./
 
       - store_test_results:
-          path: test-reports/
+          path: ./
