--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run: mkdir ./tmp
       - run: mix local.hex --force
       - run: mix local.rebar --force
-      - run: mix do deps.get, setup, compile
+      - run: mix do deps.get, compile
       - run: mix coveralls.json -o ./tmp
 
       - store_test_results:
