--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-openfn_engine-*.tar
+engine-*.tar
 
 # OpenFn Runtime
 /priv/openfn/runtime
