try adding rust to circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - checkout
 
+      - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y 
       - run: mkdir ./tmp
       - run: mix local.hex --force
       - run: mix local.rebar --force
