rustup, rather than rust

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 
       - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y 
       - run: source $HOME/.cargo/env
-      - run: rust target add x86_64-pc-linux-gnu
+      - run: rustup target add x86_64-pc-linux-gnu
       - run: mkdir ./tmp
       - run: mix local.hex --force
       - run: mix local.rebar --force
