--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,31 @@
 # Check https://circleci.com/docs/2.0/language-elixir/ for more details
 version: 2
 jobs:
-  build:
+  test on elixir 1.11:
     parallelism: 1
     docker:
       - image: circleci/elixir:1.11.3-node
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/repo
+    steps:
+      - checkout
+
+      - run: mkdir ./tmp
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+      - run: mix do deps.get, compile
+      - run: mix openfn.install.runtime
+      - run: mix coveralls.json -o ./tmp
+
+      - store_test_results:
+          path: ./tmp
+
+  test on elixir 1.13:
+    parallelism: 1
+    docker:
+      - image: circleci/elixir:1.13.4-node
         environment:
           MIX_ENV: test
 
