--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,84 @@
-# Elixir CircleCI 2.0 configuration file
-# Check https://circleci.com/docs/2.0/language-elixir/ for more details
+default_env: &default_env
+  MIX_ENV: test
+  CACHE_VERSION: v5
+
+default_build: &default_build
+  parallelism: 1
+
+  working_directory: ~/repo
+
+  steps:
+    - run:
+        name: "Set PATH"
+        command: echo 'export PATH=$HOME/.asdf/bin:$HOME/.asdf/shims:$PATH' >> $BASH_ENV
+
+    - checkout
+
+    - run:
+        name: Save cache version to file
+        command: echo "$CIRCLE_STAGE $CACHE_VERSION" > ~/.cache_version
+
+    - restore_cache:
+        keys:
+          - cache-{{ checksum "~/.cache_version" }}-{{ .Branch }}
+          - cache-{{ checksum "~/.cache_version" }}-master
+
+    - run:
+        name: Update apt
+        command: sudo apt update
+
+    # Control the exact version of Elixir and Erlang via .tool-versions
+    - run: rm -f .tool-versions
+    - run: echo "elixir $ELIXIR_VERSION" >> .tool-versions
+    - run: echo "erlang $ERLANG_VERSION" >> .tool-versions
+    - run: cat .tool-versions
+    - run: sudo apt install -y build-essential autoconf m4 libncurses5-dev libwxgtk3.0-dev libgl1-mesa-dev libglu1-mesa-dev libssh-dev unixodbc-dev xsltproc
+    - run: if [ ! -d ~/.asdf ] ; then git clone https://github.com/asdf-vm/asdf.git ~/.asdf; fi
+    - run: if ! asdf plugin-list | grep erlang; then asdf plugin-add erlang https://github.com/asdf-vm/asdf-erlang.git; fi
+    - run: if ! asdf plugin-list | grep elixir; then asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git; fi
+    - run: erlang_version=$(awk '/erlang/ { print $2 }' .tool-versions) && asdf install erlang ${erlang_version}
+    - run: elixir_version=$(awk '/elixir/ { print $2 }' .tool-versions) && asdf install elixir ${elixir_version}
+
+    - run: mkdir ./tmp
+
+    - run: mix local.hex --force
+    - run: mix local.rebar --force
+
+    - run: mix deps.get
+    - run: mix deps.compile
+    - run: mix compile
+    - run: mix openfn.install.runtime
+
+    - save_cache:
+        key: cache-{{ checksum "~/.cache_version" }}-{{ .Branch }}-{{ .BuildNum }}
+        paths:
+          - _build
+          - deps
+          - ~/.asdf
+
+    - run: mix coveralls.json -o ./tmp
+
 version: 2
 jobs:
   "elixir 1.11":
-    parallelism: 1
+    <<: *default_build
     docker:
+      # This version of Elixir is overruled by asdf
       - image: circleci/elixir:1.11.3-node
         environment:
-          MIX_ENV: test
-
-    working_directory: ~/repo
-    steps:
-      - checkout
-
-      - run: mkdir ./tmp
-      - run: mix local.hex --force
-      - run: mix local.rebar --force
-      - run: mix do deps.get, compile
-      - run: mix openfn.install.runtime
-      - run: mix coveralls.json -o ./tmp
-
-      - store_test_results:
-          path: ./tmp
+          <<: *default_env
+          ELIXIR_VERSION: 1.11.3-otp-23
+          ERLANG_VERSION: 23.2.7
 
   "elixir 1.13":
-    parallelism: 1
+    <<: *default_build
     docker:
-      - image: circleci/elixir:1.13.4-node
+      # This version of Elixir is overruled by asdf
+      - image: circleci/elixir:1.11.3-node
         environment:
-          MIX_ENV: test
-
-    working_directory: ~/repo
-    steps:
-      - checkout
-
-      - run: mkdir ./tmp
-      - run: mix local.hex --force
-      - run: mix local.rebar --force
-      - run: mix do deps.get, compile
-      - run: mix openfn.install.runtime
-      - run: mix coveralls.json -o ./tmp
-
-      - store_test_results:
-          path: ./tmp
+          <<: *default_env
+          ELIXIR_VERSION: 1.13.4-otp-24
+          ERLANG_VERSION: 24.2.1
 
 workflows:
   version: 2
