--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,7 @@
 # Check https://circleci.com/docs/2.0/language-elixir/ for more details
 version: 2
 jobs:
-  "elixir 1.11":
-    parallelism: 1
-    docker:
-      - image: cimg/elixir:1.11-node
-        environment:
-          MIX_ENV: test
-
-    working_directory: ~/repo
-    steps:
-      - checkout
-
-      - run: mkdir ./tmp11
-      - run: mix local.hex --force
-      - run: mix local.rebar --force
-      - run: mix do deps.get, compile
-      - run: mix openfn.install.runtime
-      - run: mix coveralls.json -o ./tmp11
-
-      - store_test_results:
-          path: ./tmp11
-
-  "elixir 1.13":
+  build:
     parallelism: 1
     docker:
       - image: cimg/elixir:1.13-node
@@ -34,22 +13,12 @@ jobs:
     steps:
       - checkout
 
-      - run: mkdir ./tmp13
+      - run: mkdir ./tmp
       - run: mix local.hex --force
       - run: mix local.rebar --force
       - run: mix do deps.get, compile
       - run: mix openfn.install.runtime
-      - run: mix coveralls.json -o ./tmp13
+      - run: mix coveralls.json -o ./tmp
 
       - store_test_results:
-          path: ./tmp13
-
-workflows:
-  version: 2
-  "elixir 1.11":
-    jobs:
-      - "elixir 1.11"
-
-  "elixir 1.13":
-    jobs:
-      - "elixir 1.13"
+          path: ./tmp
